tests/vendor/valid/simple/ternary_middle_assignment.c
//expect 2
//tags: simple, conditional
int main() {
    int a = 1;
    a != 2 ? a = 2 : 0;
    return a;
}