tests/vendor/invalid/syntax/malformed_le.c
//tags: simple
int main() {
    return 1 < = 2;
}